gcc/testsuite/rust/rustc/ui/suggestions/issue-109436_dg.rs
struct Foo;
struct Bar;

impl From<&Foo> for Bar {
    fn from(foo: &Foo) -> Bar {
        Bar
    }
}

fn main() {
    let foo = Foo;
    let b: Bar = foo.into(); // { dg-error ".E0277." "" { target *-*-* } }
}

